--- a/app/css/header.css
+++ b/app/css/header.css
@@ -2,11 +2,28 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    font-weight: 200;
+    .dropdown{
+      margin: -8px;
+    }
 }
 
 #header-container ul li{
     float: left;
     padding: 0 10px;
+    /* font-family: emoji; */
+    >a {
+      color: #041628 !important;
+      text-decoration: none;
+    }
+    >a:hover {
+      color: #ff6100 !important;
+    }
+}
+
+
+#header-container nav{
+  background-color: rgb(228, 227, 227) !important;
 }
 
 .active{
@@ -125,6 +142,5 @@ button:focus {
     border: 0px;
     
 }
-
 /* Navbar Hamburger animation */
 
